Fixed trailer section white space

--- a/style.css
+++ b/style.css
@@ -179,37 +179,52 @@
     float: right;
     text-align: center;
     color: #8D0800;
-    transform: translate(-15%,-255%);
-    -webkit-transform: translate(-15%,-255%);
-    -moz-transform: translate(-15%,-255%);
-    -ms-transform: translate(-15%,-255%);
-    -o-transform: translate(-15%,-255%);
+    transform: translate(-15%,-300%);
+    -webkit-transform: translate(-15%,-300%);
+    -moz-transform: translate(-15%,-300%);
+    -ms-transform: translate(-15%,-300%);
+    -o-transform: translate(-15%,-300%);
+}
+
+.trailer-text img {
+    height: 300px;
+    width: 350px;
+    border-radius: 50%;
+    transform: translate(275%, -125%);
+    -webkit-transform: translate(275%, -125%);
+    -moz-transform: translate(275%, -125%);
+    -ms-transform: translate(275%, -125%);
+    -o-transform: translate(275%, -125%);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 
 /*Synopsis Section*/
 .synopsis {
-    height: 115vh;
+    height: 145vh;
     width: 100%;
+    background-image: url(img/eif.jpg);
+    background-size: cover;
 }
 
 .synopsis-container {
-    float: right;
-    margin-left: 275px;
-    margin-top: -60px;
+    margin-left: 850px;
 }
 
 .synopsis-container h1 {
     font-family: 'Champion';
     font-size: 60px;
     color: #8D0800;
-    padding-top: 10px;
+    padding-top: 250px;
 }
 
 .synopsis-container p {
     font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 25px;
+    font-size: 22px;
     line-height: 30px;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 /*Featured Clips Section*/
